# voronoid

./: CHANGELOG.md  README.md  cabal.project  voronoid.cabal
app/: Main.hs
