cabal-version:       2.0
name:                voronoid
version:             0.0.0
synopsis:            Experiments with Voronoi diagrams
description:         Experiments with Voronoi diagrams
homepage:            https://github.com/patrickt/voronoid
bug-reports:         https://github.com/patrickt/voronoid/issues
license:             GPL-3
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          patrick.william.thomson@gmail.com
copyright:           2019 Patrick Thomson
category:            Game
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.4

source-repository head
  type:                git
  location:            https://github.com/patrickt/voronoid.git

executable voronoid
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base ^>= 4.12.0.0
                     , fused-effects ^>= 0.5
                     , gloss ^>= 1.13
                     , hgeometry ^>= 0.8
                     , MonadRandom ^>= 0.5



  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
